// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement summary card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
      >
        <div
          class="pf-c-card__title"
        >
          <h2
            class="pf-c-title pf-m-xl"
          >
            Engagement Summary
          </h2>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Company
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  NASA
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Project
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Boots on the Moon
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Start Date
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Mon Jun 01 2020
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  End Date
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Wed Jul 01 2020
                </p>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-xl"
        >
          Engagement Summary
        </h2>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Company
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                NASA
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Project
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Boots on the Moon
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Start Date
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Mon Jun 01 2020
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                End Date
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Wed Jul 01 2020
              </p>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Openshift Cluster Summary matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
      >
        <div
          class="pf-c-card__title"
        >
          <h2
            class="pf-c-title pf-m-xl"
          >
            Openshift Information
          </h2>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Cloud Provider
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  AWS
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Openshift Version
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  4.4
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Storage Size
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  100G
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Cloud Region
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  N. Virginia
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Cloud Provider
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Large
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Subdomain
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  ordoabchao
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-3-col"
            />
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-xl"
        >
          Openshift Information
        </h2>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Cloud Provider
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                AWS
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Openshift Version
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                4.4
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Storage Size
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                100G
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Cloud Region
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                N. Virginia
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Cloud Provider
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Large
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Subdomain
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                ordoabchao
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-3-col"
          />
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Point of Contact Card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
      >
        <div
          class="pf-c-card__title"
        >
          <h2
            class="pf-c-title pf-m-xl"
          >
            Points of Contact
          </h2>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Engagement Lead
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Alice Doe
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Technical Lead
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Eve Doe
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                >
                  Customer Contact
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Bob Doe
                </p>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-xl"
        >
          Points of Contact
        </h2>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Engagement Lead
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Alice Doe
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Technical Lead
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Eve Doe
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-6-col"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
              >
                Customer Contact
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Bob Doe
              </p>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
